Service font-size and alignment corrected

--- a/src/scss/layouts/_testimonials.scss
+++ b/src/scss/layouts/_testimonials.scss
@@ -4,7 +4,11 @@
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
-
+  
+  &__title {
+    font-size: clamp(2rem, 2.93vw, 2.5rem);
+  }
+  
   &__list {
     margin-top: 4rem !important;
     padding-top: 1.5rem !important; //correct background image clipping
