--- a/src/scss/layouts/main/_intro.scss
+++ b/src/scss/layouts/main/_intro.scss
@@ -2,7 +2,7 @@
 
 .intro {
   text-align: center;
-  margin-top: 3rem;
+  margin-top: 5rem;
   position: relative;
 
   &:after {
