--- a/src/scss/layouts/main/_services.scss
+++ b/src/scss/layouts/main/_services.scss
@@ -2,7 +2,7 @@
 
 .services {
   .container {
-    margin-left: 1em;
+    margin-left: clamp(1.5rem, 6.4vw, 16rem);
     margin-right: 0;
 
     @include mq(small, up) {
@@ -13,6 +13,11 @@
       display: flex;
       gap: 4rem;
     }
+    @include mq(x-large, up) {
+      display: flex;
+      gap: 10rem;
+    }
+
   }
 
   &__header {
@@ -28,14 +33,20 @@
 
     &__title {
       font-size: 1.75rem;
-      line-height: 1.1;
+      font-weight: var(--fw-bold);
+      line-height: 1.5;
       width: 17ch;
+      max-width:24ch;
       margin: 0 auto;
 
-      @include mq(x-large, 'up') {
-        font-size: 2.75rem;
+      @include mq(small, up) {
+        line-height: 1.25;
         width: 100%;
         margin: 0;
+      }
+
+      @include mq(x-large, 'up') {
+        font-size: 2.5rem;
       }
     }
 
@@ -43,6 +54,10 @@
       @include mq(large, up) {
         max-width: 36ch;
         --flow-spacer: 2rem;
+      }
+
+      @include mq(x-large, up) {
+        font-size: 1rem;
       }
     }
   }
@@ -99,6 +114,9 @@
         @include mq(medium, up) {
           margin-right: 0;
           margin-left: 6rem;
+        }
+        @include mq(x-large, up) {
+          letter-spacing: -0.25px;
         }
       }
     }
